<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_hash_tag"
        android:textSize="18sp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_hash_tag"
        android:inputType="text"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textSize="18sp"
        android:importantForAutofill="no" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_from"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/since"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date_from"
        android:inputType="text"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textSize="18sp"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_untilll"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/untill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date_untilll"
        android:inputType="text"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textSize="18sp"
        android:importantForAutofill="no" />
    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Press_submit_2nd_time_after_some_time"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:text="@string/submit"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />



</LinearLayout>
